=== HEAD

* Add Sequel.json_parser_error_class and Sequel.object_to_json to allow the use of alternative JSON implementations (jeremyevans) (#662)

* Deprecate JSON.create_id usage in the json_serializer plugin (jeremyevans)

* Emulate offsets on Microsoft Access using reverse orders and total counts (jeremyevans) (#661)

* Make ado adapter handle disconnecting an already disconnected connection (jeremyevans)

* Deprecate parsing columns for the same table name in multiple schemas on jdbc (jeremyevans)

* Allow association_proxies plugin to accept a block to give user control over which methods are proxied to the dataset (jeremyevans) (#660)

* Deprecate calling Dataset#add_graph_aliases before #graph or #set_graph_aliases (jeremyevans)

* Deprecate Model.add_graph_aliases, .insert_multiple, .query, .set_overrides, .set_defaults, .to_csv, and .paginate (jeremyevans)

* Add guide for ordering code with Sequel (jeremyevans)

* Deprecate Database#transaction :disconnect=>:retry option (jeremyevans)

* Deprecate Model.set, .update, .delete, and .destroy (jeremyevans)

* Deprecate Dataset#set (jeremyevans)

* Add specs for bin/sequel (jeremyevans)

* Make constraint_validations plugin reflect validations by column (jeremyevans)

* Allow for per-model/per-validation type customization of validation options in constraint_validations plugin (jeremyevans)

* Make Database#constraint_validations in the constraint_validations plugin have raw row values (jeremyevans)

* Fix statement freeing in the ibmdb adapter (jeremyevans)

* Make single and class table inheritance plugins handle usage of set_dataset in a subclass (jeremyevans)

* Allow validates_schema_types in validation_helpers plugin accept an options hash (jeremyevans)

* Deprecate Model.set_primary_key taking multiple arguments (jeremyevans)

* Make auto_validations plugin work with databases that don't support index parsing (jeremyevans)
