@@ -82,8 +82,10 @@ module Sequel
       #
       #   hstore_op - 'a' # (hstore - 'a')
       def -(other)
-        if other.is_a?(String) && !other.is_a?(Sequel::LiteralString)
-          other = Sequel.cast_string(other)
+        other = if other.is_a?(String) && !other.is_a?(Sequel::LiteralString)
+          Sequel.cast_string(other)
+        else
+          wrap_input_array(wrap_input_hash(other))
         end
         HStoreOp.new(super)
       end
@@ -92,35 +94,40 @@ module Sequel
       #
       #   hstore_op['a'] # (hstore -> 'a')
       def [](key)
-        Sequel::SQL::StringExpression.new(:NOOP, Sequel::SQL::PlaceholderLiteralString.new(LOOKUP, [value, key]))
+        v = Sequel::SQL::PlaceholderLiteralString.new(LOOKUP, [value, wrap_input_array(key)])
+        if key.is_a?(Array) || (defined?(Sequel::Postgres::PGArray) && key.is_a?(Sequel::Postgres::PGArray)) || (defined?(Sequel::Postgres::ArrayOp) && key.is_a?(Sequel::Postgres::ArrayOp))
+          wrap_output_array(v)
+        else
+          Sequel::SQL::StringExpression.new(:NOOP, v)
+        end
       end
 
       # Check if the receiver contains all of the keys in the given array:
       #
       #   hstore_op.contain_all(:a) # (hstore ?& a)
       def contain_all(other)
-        bool_op(CONTAIN_ALL, other)
+        bool_op(CONTAIN_ALL, wrap_input_array(other))
       end
 
       # Check if the receiver contains any of the keys in the given array:
       #
       #   hstore_op.contain_any(:a) # (hstore ?| a)
       def contain_any(other)
-        bool_op(CONTAIN_ANY, other)
+        bool_op(CONTAIN_ANY, wrap_input_array(other))
       end
 
       # Check if the receiver contains all entries in the other hstore:
       #
       #   hstore_op.contains(:h) # (hstore @> h)
       def contains(other)
-        bool_op(CONTAINS, other)
+        bool_op(CONTAINS, wrap_input_hash(other))
       end
 
       # Check if the other hstore contains all entries in the receiver:
       #
       #   hstore_op.contained_by(:h) # (hstore <@ h)
       def contained_by(other)
-        bool_op(CONTAINED_BY, other)
+        bool_op(CONTAINED_BY, wrap_input_hash(other))
       end
 
       # Check if the receiver contains a non-NULL value for the given key:
@@ -134,7 +141,7 @@ module Sequel
       #
       #   hstore_op.delete('a') # delete(hstore, 'a')
       def delete(key)
-        HStoreOp.new(function(:delete, key))
+        HStoreOp.new(function(:delete, wrap_input_array(wrap_input_hash(key))))
       end
 
       # Transform the receiver into a set of keys and values:
@@ -164,7 +171,7 @@ module Sequel
       #
       #   hstore_op.keys # akeys(hstore)
       def keys
-        function(:akeys)
+        wrap_output_array(function(:akeys))
       end
       alias akeys keys
 
@@ -172,7 +179,7 @@ module Sequel
       #
       #   hstore_op.merge(:a) # (hstore || a)
       def merge(other)
-        HStoreOp.new(Sequel::SQL::PlaceholderLiteralString.new(CONCAT, [self, other]))
+        HStoreOp.new(Sequel::SQL::PlaceholderLiteralString.new(CONCAT, [self, wrap_input_hash(other)]))
       end
       alias concat merge
 
@@ -201,7 +208,7 @@ module Sequel
       #
       #   hstore_op.slice(:a) # slice(hstore, a)
       def slice(keys)
-        HStoreOp.new(function(:slice, keys))
+        HStoreOp.new(function(:slice, wrap_input_array(keys)))
       end
 
       # Return the values as a PostgreSQL set:
@@ -216,7 +223,7 @@ module Sequel
       #
       #   hstore_op.to_array # hstore_to_array(hstore)
       def to_array
-        function(:hstore_to_array)
+        wrap_output_array(function(:hstore_to_array))
       end
 
       # Return a nested array of the receiver, with arrays of
@@ -224,14 +231,14 @@ module Sequel
       #
       #   hstore_op.to_matrix # hstore_to_matrix(hstore)
       def to_matrix
-        function(:hstore_to_matrix)
+        wrap_output_array(function(:hstore_to_matrix))
       end
 
       # Return the values as a PostgreSQL array:
       #
       #   hstore_op.values # avals(hstore)
       def values
-        function(:avals)
+        wrap_output_array(function(:avals))
       end
       alias avals values
 
@@ -247,6 +254,33 @@ module Sequel
       # argument, with any additional arguments given.
       def function(name, *args)
         SQL::Function.new(name, self, *args)
+      end
+
+      # Wrap argument in a PGArray if it is an array
+      def wrap_input_array(obj)
+        if obj.is_a?(Array) && Sequel.respond_to?(:pg_array) 
+          Sequel.pg_array(obj)
+        else
+          obj
+        end
+      end
+
+      # Wrap argument in an Hstore if it is a hash
+      def wrap_input_hash(obj)
+        if obj.is_a?(Hash) && Sequel.respond_to?(:hstore) 
+          Sequel.hstore(obj)
+        else
+          obj
+        end
+      end
+
+      # Wrap argument in a PGArrayOp if supported
+      def wrap_output_array(obj)
+        if Sequel.respond_to?(:pg_array_op) 
+          Sequel.pg_array_op(obj)
+        else
+          obj
+        end
       end
     end
 
