@@ -1,5 +1,7 @@
 === HEAD
 
+* Make pg_hstore_ops extension integrate with pg_array, pg_hstore, and pg_array_ops extensions (jeremyevans)
+
 * Add Sequel.json_parser_error_class and Sequel.object_to_json to allow the use of alternative JSON implementations (jeremyevans) (#662)
 
 * Deprecate JSON.create_id usage in the json_serializer plugin (jeremyevans)
